packages/frontend/src/app/transaction/[hash]/TransactionPage.scss
@use '../../../styles/mixins.scss';
@import '../../../styles/variables.scss';

.TransactionPage {
  position: relative;

  &__CommonInfo, &__DetailsInfo {
    & > .InfoLine--Loading .InfoLine {
      &__Value {
        height: 28px;
        flex-grow: 1;
        width: 100% !important;
      }
    }
  }

  &__InfoLine {
    margin-bottom: 14px;
    justify-content: flex-start !important;

    &--VoteIndexValues {
      .InfoLine__Value {
        width: 100%;
      }
    }

    &--Schema {
      align-items: flex-start !important;

      .InfoLine__Value {
        width: 100%;
      }
    }

    &--InternalConfig {
      width: 100%;

      .InfoLine__Value {
        width: 100%;
      }
    }

    &--Baseline, &--RawTransaction, &--Status, &--Transitions, &--PublicKeys {
      align-items: baseline !important;
    }

    &--Pooling {
      .ValueContainer, .ValueCard {
        max-width: max-content;
      }
    }

    &--Transitions {
      .InfoLine__Value {
        flex-grow: 1;
        overflow: hidden;
        padding-bottom: 2px;
        padding-right: 2px;
      }
    }

    .InfoLine__Title {
      width: 200px;
      line-height: 20px;
    }

    .InfoLine__Value {
      text-align: left;
      font-size: 0.75rem;
    }
  }

  .HorisontalSeparator {
    margin: 14px 0;
  }

  &__Signature, &__AssetLockProof, &__OutputScript {
    background: transparent;
    overflow-wrap: break-word;
    word-break: break-word;
    color: var(--chakra-colors-gray-250);
    max-width: 510px;

    .CopyButton {
      margin-left: 4px;
    }
  }

  &__ErrorContainer {
    margin-top: 8px;
    font-size: 0.688rem;

    .ValueContainer__Value {
      overflow: hidden;
      overflow-wrap: break-word;
      word-break: break-word;
    }
  }

  &__BlockHeight {
    padding: 2px 8px;
    border-radius: 3px;
    font-size: 0.625rem;
    margin-right: 12px;
    white-space: nowrap;
  }

  &__DetailsInfoTitle {
    font-family: $font-heading;
    font-size: 0.75rem;
    letter-spacing: .4px;
    text-transform: uppercase;
    font-weight: 700;
    margin-bottom: 14px;
  }

  &__RawTransaction {
    align-items: flex-start;
    overflow-wrap: break-word;
    word-break: break-word;

    .CopyButton {
      margin-left: 12px;
    }
  }

  &__PublicKeyCard, &__TransitionCard {
    margin-bottom: 14px;

    &:last-child {
      margin-bottom: 0;
    }
  }

  &__VoteIndexValuesContainer {
    container-type: inline-size;
    width: 100%;
    overflow: hidden;

    .VoteIndexValues {
      width: 34.25rem;
      max-width: 100%;
    }
  }

  @media screen and (max-width: $breakpoint-md) {
    &__InfoLine {
      margin-bottom: 12px;
      justify-content: space-between !important;
      flex-wrap: wrap;

      &:not(&--Inline):not(&--Index):not(&--Type):not(&--FeeMultiplier):not(.InfoLine--Error):not(&--CoreFeePerByte):not(&--Status):not(&--Pooling) {
        flex-direction: column;
        align-items: flex-start;
        justify-content: flex-start !important;

        & > .InfoLine__Title {
          width: 100%;
          margin-bottom: 4px;
          margin-right: 0;
        }

        & > .InfoLine__Value {
          width: 100%;
        }
      }

      & > .InfoLine__Title {
        width: auto;
      }

      &--Status {
        position: relative;
      }

      &--GasUsed {
        .CreditsBlock {
          display: flex;
          flex-wrap: wrap;

          .CreditsBlock__Usd {
            margin-left: auto;
          }
        }
      }

      &--Timestamp {
        .DateBlock__Delta {
          margin-left: auto;
        }
      }

      .ValueCard, .ValueContainer {
        .Identifier {
          flex-grow: 1;

          .Identifier__SymbolsContainer {
            flex-grow: 1;
          }
        }
      }
    }

    &__VoteIndexValuesContainer {
      container-type: inline-size;
      width: 100%;
      overflow: hidden;

      .VoteIndexValues {
        width: 100%;
      }
    }

    &__StatusBadge {
      position: absolute;
      top: 0;
      right: 0;
    }

    &__ErrorContainer {
      margin-top: 0;
    }

    &__DetailsInfoTitle {
      margin-bottom: 12px;
    }

    &__RawTransaction, &__Signature, &__AssetLockProof, &__OutputScript {
      max-width: none;
    }
  }
}

